# mkdocs101

./: .gitignore  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: gh-pages-deploy-mkdocs.yml
aker_utilities/: IO_utils.py  __init__.py  akerbp_datasets.py  algorithm_utils.py  api_extractor.py  automation_utils.py  az_devops.py  build_hierarchy_tree.py  bundle_single_html.py  cdf_utils.py  confluence.py  excel_utils.py  graph_data_model.py  pandas_utils.py  path_utils.py  pdf_utils.py  regex_utils.py  sql_data_model.py  sql_utils.py
aker_utilities/tests/: dm_utils_manual.py  pdf_utils_cli_manual.sh  pdf_utils_code_manual.py  test_IO_utils.py  test_algorithm.py  test_cdf_utils.py  test_path_utils.py  test_regex_utils.py  test_sql_data_model.py  test_sql_utils.py
docs/: domain_architecture.md
docs/code/: IO_utils.md
docs/project/: PPFG.md
docs/user-guide/: how-to-deploy-docs-on-digipedia.md  how-to-setup-mkdocs.md  mkdocs-basics.md
site/: 404.html  index.html  objects.inv  sitemap.xml
site/assets/scripts/: generate_docstrings.py
site/code-reference/IO_utils/: index.html
site/code-reference/akerbp_datasets/: index.html
site/code-reference/algorithm_utils/: index.html
site/code-reference/api_extractor/: index.html
site/code-reference/automation_utils/: index.html
site/code-reference/az_devops/: index.html
site/code-reference/build_hierarchy_tree/: index.html
site/code-reference/bundle_single_html/: index.html
site/code-reference/cdf_utils/: index.html
site/domain_architecture/: index.html
site/search/: search_index.json
(+13 files in other folders)
