[tool.poetry]
name = "mkdocs101"
version = "0.1.0"
description = "Test project for mkdocs documentation setup"
authors = ["Kahraman V Dogan"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs-material = "^9.5.45"
mkdocs-coverage = "^1.1.0"
mkdocstrings-python = "^1.12.2"
mkdocs-gen-files = "^0.5.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
