[tool.poetry]
name = "mkdocs101"
version = "0.1.0"
description = "Test project for mkdocs documentation setup"
authors = ["Kahraman V Dogan"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs-material = "^9.5.45"
mkdocs-coverage = "^1.1.0"
mkdocstrings-python = "^1.12.2"
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.1"
mdx-truly-sane-lists = "^1.3"
mkdocs-awesome-pages-plugin = "^2.9.3"
mkdocs-nav-weight = "^0.2.0"
mkdocs-git-revision-date-localized-plugin = "^1.3.0"
mkdocs-git-authors-plugin = "^0.9.2"
material-plausible-plugin = "^0.2.0"
mkdocs-drawio-file = "^1.5.2"
mkdocs-macros-plugin = "^1.3.7"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
